--- a/moodle-dark.css
+++ b/moodle-dark.css
@@ -1,15 +1,15 @@
 body, .dropdown-menu, .form-control {
     background-color: #343a40 !important;
-    color: #fff;
-}
-
-#region-main, .navbar-bootswatch, .nav-link, .btn, .list-group-item, .page-item {
-    background-color: #212529 !important;
     color: #fff !important;
 }
 
 a, a:hover, .icon, .dropdown-item, .site-name {
     color: #fff !important;
+}
+
+#region-main, .navbar-bootswatch, .nav-link, .btn, .list-group-item, .page-item, .info, .formulation {
+    color: #fff !important;
+    background-color: #212529 !important;
 }
 
 .course-summaryitem, .card {
